--- a/app/views/deals/store_coupons.html.erb
+++ b/app/views/deals/store_coupons.html.erb
@@ -303,6 +303,16 @@
           </div>
 
           <span>★ BEAUTY</span>
+
+          <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/3egCiec">Look Fantastic</a></em>
+            <strong>- - - - - - - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/3egCiec">Shop Now</a></em>
+            <p>Free US shipping on orders over $30</p>
+            <p class="none">-</p>
+            <a class="shop_m" target="_blank" href="https://bit.ly/3egCiec">Shop Now → </a>
+          </div>
+
           <div class="card">
             <em class="ls"><a target="_blank" href="https://bit.ly/2WDL7Ze">Ulta</a></em>
             <strong>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</strong>
