--- a/app/views/deals/store_sales.html.erb
+++ b/app/views/deals/store_sales.html.erb
@@ -109,6 +109,15 @@
             <p>Free 3-day shipping & returns when you sign up<br> for Newegg Premier.</p>            
             <a class="shop_m" target="_blank" href="https://bit.ly/2JhlaXt">Shop Now → </a>
           </div>
+
+          <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/2K1GHUu">Vapor</a></em>
+            <strong>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/2K1GHUu">Shop Now</a></em>
+            <p>Free shipping when you spend $25 or more.</p>       
+            <p>International & Express Shipping available.</p>     
+            <a class="shop_m" target="_blank" href="https://bit.ly/2K1GHUu">Shop Now → </a>
+          </div>
           
 
           <span>★ DEPARTMENT</span>
@@ -145,6 +154,43 @@
       <div class="store_mid clearfix">
         <div class="mid_left mid_com">
           <span>★ FASHION</span>
+
+          <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/2K3FWds">Opening Ceremony</a></em>
+            <strong>- - - - - - - - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/2K3FWds">Shop Now</a></em>
+            <p>Free shipping & returns on orders over $100</p>
+            <p class="none">-</p>
+            <a class="shop_m" target="_blank" href="https://bit.ly/2K3FWds">Shop Now → </a>
+          </div>
+
+          <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/39YR1ao">End Clothing</a></em>
+            <strong>- - - - - - - - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/39YR1ao">Shop Now</a></em>
+            <p>Ships internationally.</p>
+            <p>FREE FEDEX Priority Service on orders over $250.00</p>
+            <a class="shop_m" target="_blank" href="https://bit.ly/39YR1ao">Shop Now → </a>
+          </div>
+
+          <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/2V37mXl">My Theresa</a></em>
+            <strong>- - - - - - - - - - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/2V37mXl">Shop Now</a></em>
+            <p>Ships internationally.</p>
+            <p>Over $ 500 are free of charge within the USA</p>
+            <a class="shop_m" target="_blank" href="https://bit.ly/2V37mXl">Shop Now → </a>
+          </div>
+
+          <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/3cqlMXx">Matches Fashion</a></em>
+            <strong>- - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/3cqlMXx">Shop Now</a></em>
+            <p>Ships internationally.</p>
+            <p class="none">-</p>
+            <a class="shop_m" target="_blank" href="https://bit.ly/3cqlMXx">Shop Now → </a>
+          </div>
+
           <div class="card">
             <em class="ls"><a target="_blank" href="https://bit.ly/3dljJoU">Gap</a></em>
             <strong>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</strong>
@@ -601,6 +647,15 @@
           </div>
 
           <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/2V8xZdD">Nine West</a></em>
+            <strong>- - - - - - - - - - - - - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/2V8xZdD">Shop Now</a></em>
+            <p>1-day shipping available.</p>
+            <p class="none">-</p>
+            <a class="shop_m" target="_blank" href="https://bit.ly/2V8xZdD">Shop Now → </a>
+          </div>
+
+          <div class="card">
             <em class="ls"><a target="_blank" href="https://bit.ly/3bwA0VZ">Toms</a></em>
             <strong>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</strong>
             <em class="rs"><a target="_blank" href="https://bit.ly/3bwA0VZ">Shop Now</a></em>
@@ -630,6 +685,16 @@
 
 
           <span>★ BEAUTY</span>
+
+          <div class="card">
+            <em class="ls"><a target="_blank" href="https://bit.ly/3cj65kv">Look Fantastic</a></em>
+            <strong>- - - - - - - - - - - - - - - - - - - - - - -</strong>
+            <em class="rs"><a target="_blank" href="https://bit.ly/3cj65kv">Shop Now</a></em>
+            <p>Free US shipping on orders over $30</p>
+            <p class="none">-</p>
+            <a class="shop_m" target="_blank" href="https://bit.ly/3cj65kv">Shop Now → </a>
+          </div>
+
           <div class="card">
             <em class="ls"><a target="_blank" href="https://bit.ly/3dsXv4k">Ulta</a></em>
             <strong>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</strong>
