--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
     <!--google alalytics-->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113637704-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113637704-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-113637704-1');
-    </script>
+    </script> -->
 
    <!-- Global site tag (gtag.js) - Google Analytics (https)-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113637704-2"></script>
@@ -32,6 +32,10 @@
 
       gtag('config', 'UA-113637704-2');
     </script>
+
+    <!-- Google Adsense -->
+    <script data-ad-client="ca-pub-1626664143504156" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 
   </head>
   <body>
