--- a/app/views/shared/_hotpro_header.html.erb
+++ b/app/views/shared/_hotpro_header.html.erb
@@ -4,7 +4,7 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
        <li><a href="/deals/quick_search">Amazon Deal Finder</a></li>
-       <% if can? :update, @promocodes %><li><a href="/bargains">Featured Deals</a></li><% end %>
+       <li><a href="/bargains">Featured Deals</a></li>
        <li><a href="/deals/bestdeals">Today's Discovery</a></li>
        <li><a href="/hotdeals">Deals</a></li>
        <!-- <li class="coumos1 more"><a href="/deals/bestdeals"> [ Daily Deals ]</a></li> -->
