--- a/app/views/shared/_new_header.html.erb
+++ b/app/views/shared/_new_header.html.erb
@@ -13,7 +13,7 @@
 
         <div class="logo">
           <!-- <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a> -->
-          <a href="/"><img class="oh_logo_big" src="<%=asset_path 'visual_01.jpg' %>" alt="ohigottabuythis" /></a></h1>
+          <a href="/"><img class="oh_logo_big" src="<%=asset_path 'visual_01.jpg' %>" alt="ohigottabuythis | Find The Best Deals" /></a></h1>
           <!-- <a href="/">Oh,i gotta buy this</a> -->
         </div>
         
