--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -12,7 +12,7 @@
 
         <div class="lt_cnt">
           <h2 class="quick_h2">Quick Search</h2>
-          <img class="quick_img" src="<%=asset_path 'quick_search.png' %>">
+          <img class="quick_img" src="<%=asset_path 'quick_search.png' %>" alt="Amazon Quick Deal Finder">
           <div class="note qs_pc">
             <ul>
               <li>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</li>
