--- a/app/views/deals/_header_featured.html.erb
+++ b/app/views/deals/_header_featured.html.erb
@@ -1,7 +1,7 @@
 <div class="sub_nav most_review_sub">
   <div class="sub_nav_pc">
     <ul class="clearfix">
-      <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
+      <li class="coumos1"><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
       <li><a  class="active" href="/bargains">Featured Deals</a></li>
       <li><a href="/deals/bestdeals">Today's Discovery</a></li>
       <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
