--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -5,10 +5,10 @@
       <ul class="clearfix">
         <!-- <li><a href="/deals/stores">Home</a></li> -->
         <li class="coumos1"><a href="/storepromotions">Today's Discovery</a></li>
-        <li><a href="/deals/store_sales">Sale & Clearance</a></li>
-        <li><a href="/deals/store_coupons">Coupons & Promotions</a></li>
-        <li><a href="/deals/store_dealoftheday">Deal Of The Day</a></li>
-        <li><a href="/deals/store_weeklyad">Weekly Ad</a></li>
+        <li><a href="/deals/storesales">Sale & Clearance</a></li>
+        <li><a href="/deals/storecoupons">Coupons & Promotions</a></li>
+        <li><a href="/deals/storedealoftheday">Deal Of The Day</a></li>
+        <li><a href="/deals/storeweeklyad">Weekly Ad</a></li>
         <!-- <li><a href="/storedeals">Bargains By Store</a></li> -->
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
         <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
