--- a/app/views/deals/_navbar_deals.html.erb
+++ b/app/views/deals/_navbar_deals.html.erb
@@ -3,14 +3,14 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button> -->
     <div class="sub_nav_pc">
       <ul class="clearfix">
-        <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
+        <li class="coumos1"><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li><a href="/bargains">Featured Deals</a></li>
         <li>
           <a href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
             <li><a class="active" href="/deals/bestdeals">Deals</a></li>
-            <li><a href="/deals/promo_codes">Codes</a></li>
+            <li><a href="/deals/promocodes">Codes</a></li>
           </ul>
         </li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
