--- a/app/views/deals/categories.html.erb
+++ b/app/views/deals/categories.html.erb
@@ -15,11 +15,11 @@
     </div> -->
     
     <div class="category_mobile">
-      <a href="/deals/quick_search"><img class="quick_img" src="<%=asset_path 'in_find.png' %>"></a>
+      <a href="/deals/quicksearch"><img class="quick_img" src="<%=asset_path 'in_find.png' %>"></a>
       <a href="/hotdeals"><img class="quick_img" src="<%=asset_path 'in_deal.png' %>"></a>
       <a href="/promocodes"><img class="quick_img" src="<%=asset_path 'in_coupon.png' %>"></a>
       <a href="/storepromotions"><img class="quick_img" src="<%=asset_path 'in_featured.png' %>"></a>
-      <a href="/deals/most_reviewed"><img class="quick_img" src="<%=asset_path 'in_rating.png' %>"></a>
+      <a href="/deals/mostreviewed"><img class="quick_img" src="<%=asset_path 'in_rating.png' %>"></a>
       <a href="/gadgets"><img class="quick_img" src="<%=asset_path 'in_gadget.png' %>"></a>
       <a href="/recommends"><img class="quick_img" src="<%=asset_path 'in_pick.png' %>"></a>
     </div>
