--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
   <%= render 'shared/new_header' %>
   <%= yield %> 
   <div class="footer_wrap"><%= render 'shared/footer2' %></div>
-  <!-- <div class="footer_m_wrap"><%= render 'shared/footer_m' %></div> -->
+  <div class="footer_mobile"><%= render "shared/footer_mobile" %></div>
   <%= javascript_include_tag 'application' %>
    <!-- for Isotope -->
   <!-- <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script> -->
