--- a/app/views/shared/_botton_amz.html.erb
+++ b/app/views/shared/_botton_amz.html.erb
@@ -1,5 +1,5 @@
 <div class="botton_m clearfix">
-  <a href="/deals/quick_search"><img src="<%=asset_path 'ui_finder.png' %>" alt="Amazon Deal Finder" /></a>
+  <a href="/deals/quicksearch"><img src="<%=asset_path 'ui_finder.png' %>" alt="Amazon Deal Finder" /></a>
   <a href="/bargains"><img src="<%=asset_path 'ui_featured.png' %>" alt="Amazon Featured Deals" /></a>
   <a href="/hotdeals"><img src="<%=asset_path 'ui_sale.png' %>" alt="Amazon Sale" /></a>
   <a href="/promocodes"><img src="<%=asset_path 'ui_code.png' %>" alt="Amazon Coupon" /></a>
