--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -18,7 +18,7 @@
           <li><a href="/">#Home</a></li>
           <li><a href="/categories">#Category</a></li>
           <li><a href="/recommends">#Featured</a></li>
-          <li><a href="/deals/quick_search">#Amazon Deals Finder</a></li>
+          <li><a href="/deals/quicksearch">#Amazon Deals Finder</a></li>
           <li><a href="/deals/bestdeals">#Amazon Deals</a></li>
           <li><a href="/deals/promo_codes">#Amazon Coupon Codes</a></li>
           <li><a href="/deals/storepromotions">#Stores</a></li>
