--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -515,15 +515,23 @@ header .gnb_m,header .gnb_open2{display:none;}
   .footer2 .footer_down ul li{margin:0 10px 5px 0;}
 }
 
-/* For Footer_m Section */
-/*.footer_m{display:none;}*/
+
+/* Footer Mobile */
+.footer_mobile{display:none;}
+.footer_mobile img.footer_icon{width:30px;}
+.footer_mobile .wrapper{max-width: 320px;margin:2em auto;}
+.nav--icons{position:fixed;bottom:0;left:0;right:0;background:#fff;}
+.nav--icons ul{list-style-type:none;display:-webkit-box;display:flex;flex-wrap:nowrap;-webkit-box-pack:justify;justify-content: space-between;padding:0;margin:0;}
+.nav--icons ul li a{font-family:sans-serif;font-size:11px;letter-spacing:1px;text-decoration:none;color:#000;line-height:1;vertical-align:middle;display:-webkit-box;display:flex;-webkit-box-align:center;align-items: center;border-radius:3em;padding:0.75em 1.25em;-webkit-transition:0.6s ease-in-out;transition:0.6s ease-in-out;}
+
 @media screen and (max-width:640px){
-  .footer_m{display:block;position:fixed;height:60px;width:100%;border-top:1px solid #ccc;background:#fff;bottom:0;}
-  .footer_m ul{}
-  .footer_m ul li{float:left;width:33.33%;text-align:center;height:60px;position:relative;}
-  .footer_m ul li a{display:block;color:#000;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
-  
+  /*.footer_mobile{display:block;}*/
 }
+@media screen and (min-width:641px) and (max-width:1199px){
+  /*.footer_mobile{display:block;}*/
+}
+
+
 
 /*About Us*/
 .about_us{width:1000px;margin:120px auto 0 auto;font-family: 'Montserrat', sans-serif;}
