--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -3,13 +3,13 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
-        <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
+        <li class="coumos1"><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li>
           <a href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
             <li><a href="/deals/bestdeals">Deals</a></li>
-            <li><a href="/deals/promo_codes">Codes</a></li>
+            <li><a href="/deals/promocodes">Codes</a></li>
           </ul>
         </li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
@@ -30,11 +30,11 @@
       <ul class="clearfix">
         <p>MENU</p>
         <li class="top_menu"><a href="/deals/quick_search">AMAZON's BARGAIN</a></li>
-        <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
+        <li><a href="/deals/quicksearch">AMAZON DEAL FINDER,</a></li>
         <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
         <li><a href="/deals/bestdeals">TODAY'S DISCOVERY,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
-        <li><a href="/deals/promo_codes">COUPON CODES,</a></li>
+        <li><a href="/deals/promocodes">COUPON CODES,</a></li>
         <li><a target="_blank" href="https://amzn.to/2Q8uWyX">DEAL OF THE DAY</a></li>
         <li><a target="_blank" href="https://amzn.to/2IsIyRw">LIGHTNING DEALS</a></li>
         <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
@@ -44,7 +44,7 @@
         <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
         <li class="top_menu"><a href="storepromotions">FEATURED DISCOUNTS</a></li>
         <li><a href="/storepromotions">TODAY'S DISCOVERY</a></li>
-        <li><a href="/deals/store_sales">SALE & CLEARANCE</a></li>
+        <li><a href="/deals/storesales">SALE & CLEARANCE</a></li>
         <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
