--- a/app/views/shared/_header_bystore.html.erb
+++ b/app/views/shared/_header_bystore.html.erb
@@ -1,6 +1,6 @@
 <div class="deals_main_menu clearfix">
   <ul>
-    <li class="nth_1"><a href="/deals/quick_search">All About Amazon</a></li>
+    <li class="nth_1"><a href="/deals/quicksearch">All About Amazon</a></li>
     <li class="active"><a class="active" href="/storepromotions"><span>Stores</span></a></li>
   </ul>    
 </div>
