--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -6,7 +6,7 @@
         <h1><a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" alt="ohigottabuythis" /></a></h1>
        </div>
        <ul class="clearfix">
-        <li><a href="/deals/quick_search">BARGAIN <!-- <em>of Amazon</em> --></a></li>
+        <li><a href="/deals/quicksearch">BARGAIN <!-- <em>of Amazon</em> --></a></li>
         <li><a href="/gadgets">GADGETS<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <!-- <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li> -->
