--- a/app/views/shared/_hotpro_header.html.erb
+++ b/app/views/shared/_hotpro_header.html.erb
@@ -3,7 +3,7 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button> -->
     <div class="sub_nav_pc">
       <ul class="clearfix">
-       <li><a href="/deals/quick_search">Amazon Deal Finder</a></li>
+       <li><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
        <li><a href="/bargains">Featured Deals</a></li>
        <li><a href="/deals/bestdeals">Today's Discovery</a></li>
        <li><a href="/hotdeals">Deals</a></li>
