--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -55,6 +55,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p span{border:1px solid #6a6a6a;border-radius:100px;padding:0 5px;margin-right:3px;display:none;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p a{color:#6d6e71;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em{font-size:17px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em.total_p{font-size:30px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em a{color:#000;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em i:before{content: "\f08e";font-family: FontAwesome;font-style: normal;margin-left:3px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .n_expired{color:#ff4d4d;}
